--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
 		"@sentry/sveltekit": "^10.36.0",
 		"@supabase/ssr": "^0.8.0",
 		"@supabase/supabase-js": "^2.91.1",
+		"@types/leaflet": "^1.9.21",
 		"clsx": "^2.1.1",
+		"leaflet": "^1.9.4",
 		"lucide-svelte": "^0.563.0",
 		"mercadopago": "^2.12.0",
 		"resend": "^6.8.0",
